# pixiv-api

./: README.md
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-05-27-pixiv-api-design.md
pixiv-api/: Cargo.toml
pixiv-api/examples/: bookmark_manager.rs  download_illusts.rs  get_token.rs  user_profile.rs
pixiv-api/src/: error.rs
pixiv-api/src/api/: illust.rs  misc.rs  mod.rs  novel.rs  search.rs  user.rs
pixiv-api/src/downloader/: mod.rs
pixiv-api/src/models/: illust.rs  mod.rs  novel.rs  search.rs  user.rs
pixiv-dl/: Cargo.toml
pixiv-dl/src/: main.rs
