[package]
name = "pixiv-client"
version = "0.1.2"
edition = "2024"
description = "Async Rust client for the Pixiv App API (6.x) with typed models and automatic token refresh"
license = "MIT"
repository = "https://github.com/modenicheng/pixiv-api"
keywords = ["pixiv", "api", "illustration", "async", "art"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "../README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
hex = "0.4"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"

[features]
gfw-bypass = []
