[package]
name = "pixiv-dl"
version = "0.1.0"
edition = "2024"
description = "CLI tool for searching and downloading illustrations from Pixiv"
license = "MIT"

[dependencies]
pixiv-client = { path = "../pixiv-api", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
reqwest = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
chrono = "0.4"
md-5 = "0.10"
