[package]
name = "pixiv-dl"
version = "0.1.2"
edition = "2024"
description = "CLI tool for searching and downloading illustrations from Pixiv"
license = "MIT"

[dependencies]
pixiv-client = { path = "../pixiv-api", version = "0.1.2" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
sha2 = "0.11"
base64 = "0.22"
rand = "0.9"
chrono = "0.4"
md-5 = "0.11"
dirs = "6"
hex = "0.4"
